Image texture not repeating in viewport, renders correctly (2.83.0 and 2.90) #77453

Closed
opened 2020-06-05 17:01:15 +02:00 by Wonky Wizard · 8 comments

Bisecting shows 59aed2a255 as the cause.


System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: 2.82

Short description of error
Viewport Shading set to Studio/Texture
Using a 4 pixel by 4 pixel texture file
with the image texture shader set to closest and repeat
the image texture is not repeating in the viewport.
Renders correctly.

Exact steps for others to reproduce the error
(1) Texture a cube
(2) Scale the built-in unwrap larger than image
(3) Viewport Shading set to Studio/Texture
(4) Setup Image Shader and set it to Closest and repeat

Texture Closest Repeat Viewport.png

Closest Repeat Texture.blend

Bisecting shows 59aed2a255 as the cause. --- **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: 2.82 **Short description of error** Viewport Shading set to Studio/Texture Using a 4 pixel by 4 pixel texture file with the image texture shader set to closest and repeat the image texture is not repeating in the viewport. Renders correctly. **Exact steps for others to reproduce the error** (1) Texture a cube (2) Scale the built-in unwrap larger than image (3) Viewport Shading set to Studio/Texture (4) Setup Image Shader and set it to Closest and repeat ![Texture Closest Repeat Viewport.png](https://archive.blender.org/developer/F8579589/Texture_Closest_Repeat_Viewport.png) [Closest Repeat Texture.blend](https://archive.blender.org/developer/F8579588/Closest_Repeat_Texture.blend)
Author

Added subscriber: @wonkywizard

Added subscriber: @wonkywizard
Ankit Meel changed title from New Bug since 2.82? to Image texture not repeating in viewport, renders correctly 2020-06-05 20:01:34 +02:00
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm in 2.83 and 2.90 (2020-06-05 19:55) fc672ce8e2. Will look into bisecting the cause.

Can confirm in 2.83 and 2.90 (2020-06-05 19:55) `fc672ce8e2`. Will look into bisecting the cause.
Member

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker
Member

Bisecting shows 59aed2a255 as the cause.

@Jeroen-Bakker @fclem , mind taking a look.

Bisecting shows 59aed2a255 as the cause. @Jeroen-Bakker @fclem , mind taking a look.
Alaska changed title from Image texture not repeating in viewport, renders correctly to Image texture not repeating in viewport, renders correctly (2.83.0 and 2.90) 2020-06-06 01:09:18 +02:00
Clément Foucault self-assigned this 2020-06-06 11:24:47 +02:00

This issue was referenced by 1f6d1213d2

This issue was referenced by 1f6d1213d27cbe3e50460aa6da54e0c7606f2216

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77453
No description provided.