Workbench: Use eGPUSamplerState to change texture sampling behavior

This removes some fragment shader hacks and improve the support of
different repeat & filtering modes.

This fix T77453 Image texture not repeating in viewport